# Hannah

./: .env.example  .gitignore  config.yaml  hannah.py  pyproject.toml  requirements.txt
hannah/: __init__.py
hannah/_data_/: __init__.py  cache.py  fastf1_loader.py  feature_builder.py  jolpica_client.py  openf1_client.py  openpitwall_loader.py  preprocess.py  season_roster_resolver.py
hannah/agent/: __init__.py  context.py  loop.py  memory.py  persona.py  prompts.py  skills.py  subagent_manager.py  subagents.py  tool_registry.py  worker_registry.py  worker_runtime.py
hannah/bus/: __init__.py  events.py  queue.py
hannah/cli/: __init__.py  agent_command.py  app.py  chat.py  command_prompts.py  format.py  provider_ui.py
hannah/config/: __init__.py  loader.py  provider_setup.py  schema.py
hannah/docs/: AGENT_LOOP.md  AGENT_RUNTIME_SLICE_1_RELEASE.md  ARCHITECTURE.md  GOAL.md  PRD.md  README.md  SCENARIOS.md  V1_5_RELEASE.md  V1_RELEASE.md  V1_SCRATCHPAD.md  V2_FINAL_CALL.md  roadmap.md  tools-trace.md
hannah/domain/: __init__.py  commands.py  prompts.py  race_state.py  resolved_roster.py  teams.py  tracks.py
hannah/mcp/: __init__.py  manager.py  registry.py
hannah/models/: __init__.py  artifact_paths.py  artifacts.py  device.py  evaluate.py  (+6 more)
scripts/: diagnose_litellm_error.py  diagnose_provider.py  evaluate_models.py  fetch_openf1_features.py  run_trained_inference.py  train_laptime_real.py  train_laptime_v2.py  train_pit_policy_real.py  train_pit_policy_v2.py  train_tyre_real.py  train_tyre_v2.py  train_winner_real.py
tests/: test_imports.py
(+130 files in other folders)
