[project]
name = "hannah-smith"
version = "0.1.0-alpha"
description = "CLI-first F1 strategy simulation agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25",
    "click>=8.1",
    "fastapi>=0.110",
    "fastf1>=3.3",
    "gymnasium>=0.29",
    "litellm>=1.40",
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.6",
    "prompt_toolkit>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "stable-baselines3>=2.2",
    "torch>=2.2",
    "uvicorn>=0.29",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
hannah = "hannah.cli.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hannah"]
